syntax = "proto3";

package proto;

message Asignacion{
    int64 PosDireccion = 1;
    int64 NumChunk = 2;
}

message Propuesta{
    repeated Asignacion asignacion = 1;
    string titulo = 2; 
    int64 Nchunks = 3;
    int64 IdNodo = 4;
}

message Solicitud{
   int64 Id = 1; 
}


service ServicioNameNode{
    rpc Confirmar(Propuesta) returns (Propuesta);
    rpc SolicitarAcceso(Solicitud) returns (Solicitud);
}
